fixed vertical scrolling on small screen

--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -4,6 +4,8 @@
 	max-width: 1171px;
 	margin-left: auto;
 	margin-right: auto;
+	/* Overflow: hidden fixes vertical scrolling on mobile */
+	overflow: hidden;
 
 	&--medium {
 		max-width: 976px;
